[tool.poetry]
name = "raftpi"
version = "0.1.0"
description = "Raft implementation for raspberry PIs"
authors = ["Wolf Mermelstein <wolfmermelstein@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [ { include = "raftpi", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"

[tool.poetry.dev-dependencies]
black = "^24.00"

[tool.poetry.scripts]
main = "raftpi.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
